vpc.tf
resource "aws_vpc" "kunle-vpc" {
  cidr_block       = "10.0.0.0/16"
  instance_tenancy = "default"

  tags = {
    Name = "kunle-vpc"
  }
}
